==> Edmond-Sung-Tymphany/Hendrix_M_Lite_GD/sw/driver/i2c_driver/gd32/I2CDrv.c <==
#include "stdbool.h"
#include "stm32f0xx.h"
#include "commonTypes.h"
#include "I2CDrv.h"
#include "./I2CDrv_priv.h"
#include "trace.h"
#include "assert.h"
#include "attachedDevices.h"
#include "bsp.h"
#define I2C_TIMEOUT_MS    20
#define I2C_TIMEOUT                               0x1000
#define SCL_400     (400)
#define PRESC_400   (0x00 << 28)   // timing prescalr, referring to datasheet RM0360 in page 584
#define SCLDEL_400  (0x01 << 20)   // data setup time.
#define SDADEL_400  (0x00 << 16)   // Data hold time.
#define SCLH_400    (0x03 << 8)    //SCL high period
#define SCLL_400    (0x08)         //SCL low period
#define SCL_350     (350)          //practical test for near 348.2khz
#define PRESC_350   (0x00 << 28)   // timing prescalr,referring to datasheet RM0360 in page 584
#define SCLDEL_350  (0x01 << 20)   // data setup time.Practical test for near 1.12us
#define SDADEL_350  (0x00 << 16)   // Data hold time.Practical test for near 500ns
#define SCLH_350    (0x05 << 8)    //SCL high period.Practical test for near 1.1us
#define SCLL_350    (0x09)         //SCL low period.Practical test for near 1.6us
#define SCL_100     (100)
#define PRESC_100   (0x01 << 28)   // timing prescalr, referring to datasheet RM0360 in page 584
#define SCLDEL_100  (0x04 << 20)   // data setup time.
#define SDADEL_100  (0x02 << 16)   // Data hold time.
#define SCLH_100    (0x0f << 8)    //SCL high period
#define SCLL_100    (0x13)         //SCL low period

void I2CDrv_Ctor(cI2CDrv * me, tI2CDevice * pConfig)
{
    ASSERT(me && pConfig->deviceInfo.deviceType==I2C_DEV_TYPE);
    
    /* Duplicate ctor is invalid. If duplicate ctor but no dulipcate xtor,
     * chXUserCount is never 0, and never xtor I2C
     */
    ASSERT(!me->isReady);
    
    I2C_TypeDef* I2Cx;
    me->pConfig = pConfig;
    me->stopEnable= TRUE;
    
    if(pConfig->channel ==I2C_CHANNEL_ONE)
    {      
        ch1UserCount++;
        if (bIsCh1Ready == FALSE)
        {
            I2Cx=I2C1;
            I2CDrv_LowLevelInit(me);
            ch1BaudRate= me->pConfig->baudRate;
            bIsCh1Ready = TRUE;
        }
        
        /* All configuration on a I2C bus should have the same baut rate.
         * But to avoid wrong setting, we double check here.
         */
        ASSERT(ch1BaudRate==me->pConfig->baudRate);
    }
    else if(pConfig->channel ==I2C_CHANNEL_TWO)
    {      
        ch2UserCount++;
        if (bIsCh2Ready == FALSE)
        {
            I2Cx=I2C2;
            I2CDrv_LowLevelInit(me);
            ch2BaudRate= me->pConfig->baudRate;
            bIsCh2Ready = TRUE;
        }
        
        /* All configuration on a I2C bus should have the same baut rate.
         * But to avoid wrong setting, we double check here.
         */
        ASSERT(ch2BaudRate==me->pConfig->baudRate);
    }
    else
    {
        /* Wrong I2C bus parameter */
        ASSERT(0);
    }
    
    me->isReady = TRUE;
    (void)I2Cx;  // to supress compiler warning
}

eTpRet I2CDrv_MasterWrite(cI2CDrv * me, tI2CMsg const * const  msg)
{
    uint8_t write_Num;
    I2C_Timeout = I2C_TIMEOUT;
    I2C_TypeDef*    I2Cx;
    uint8*          pMsg = msg->pMsg;
    if (me->pConfig->channel == I2C_CHANNEL_ONE)
    {
        I2Cx=I2C1;
    }
    else if (me->pConfig->channel == I2C_CHANNEL_TWO)
    {
        I2Cx=I2C2;
    }
    else
    {
        ASSERT(0); /* Support I2C1/I2C2 currently */
        return TP_FAIL;
    }

    /* Write do not handle msg->regAdd, should be NULL */
    ASSERT(msg->regAddr==0);
    
/*----------------------------------------------------------------------------------------------*/  
    /* Configure slave address, nbytes, reload, end mode and start or stop generation */
  I2C_Timeout = I2C_TIMEOUT;
  while(I2C_GetFlagStatus(I2Cx, I2C_FLAG_BUSY))//1
  {
    if((I2C_Timeout--) == 0)
    {
      return I2C_FAIL;
    }
  }

  I2C_GenerateSTART(I2Cx, ENABLE);
  I2C_Timeout = I2C_TIMEOUT;
  while(!I2C_CheckEvent(I2Cx, I2C_EVENT_MASTER_MODE_SELECT))//2
  {
    if((I2C_Timeout--) == 0)
    {
      return I2C_FAIL;
    }
  }

  I2C_Send7bitAddress(I2Cx, msg->devAddr, I2C_Direction_Transmitter); //driver_Addr<<1
  I2C_Timeout = I2C_TIMEOUT;
#if 1
  while(!I2C_CheckEvent(I2Cx, I2C_EVENT_MASTER_TRANSMITTER_MODE_SELECTED))//3
  {
    if((I2C_Timeout--) == 0)
    {
      return I2C_FAIL;
    }
  }
#endif
	/*I2C_SendData(I2Cx, start_Addr);
	I2C_Timeout = I2C_TIMEOUT;
while (!I2C_CheckEvent(I2Cx, I2C_EVENT_MASTER_BYTE_TRANSMITTED))//4
  {
    if((I2C_Timeout--) == 0)
    {
      return I2C_FAIL;
    }
  }*/

  for(write_Num = 0; write_Num < msg->length; write_Num++)
	{
		  I2C_SendData(I2Cx, pMsg[write_Num]); 
      I2C_Timeout = I2C_TIMEOUT;
			  while (!I2C_CheckEvent(I2Cx, I2C_EVENT_MASTER_BYTE_TRANSMITTED))//5
				{
					if((I2C_Timeout--) == 0)
					{
						return I2C_FAIL;
					}
				}
    }

	I2C_GenerateSTOP(I2Cx, ENABLE);		
  #if 0  
    /* Reset I2C if some noise let MCU enter I2C BUSY status
     */
    if( I2Cx->ISR & I2C_ISR_BUSY && !me->stopEnable)
    {
        I2CDrv_RecoverFromBusy(I2Cx);
    }
      
      
    if( !me->stopEnable )
    {
        //[Special I2C] command will *not* end of STOP
        I2C_TransferHandling(I2Cx, msg->devAddr, (msg->length), I2C_SoftEnd_Mode, I2C_Generate_Start_Write);
    }
    else
    {    
        //[Standard I2C] command will end with STOP
        I2C_TransferHandling(I2Cx, msg->devAddr, (msg->length), I2C_AutoEnd_Mode, I2C_Generate_Start_Write); 
    }
    
    if(msg->length==0)
    {
        /* Wait until TXIS flag is set */
        /* The TXIS flag is not set when a NACK is received. */
        if( TP_SUCCESS!=I2CDrv_WaitReset(I2Cx, I2C_ISR_TXIS, I2C_TIMEOUT_MS) ) { 
              return TP_ACCESS_ERROR;
        }
    }
    else 
    {
        uint32_t DataNum = 0;
        while (DataNum != (msg->length))
        {    
            /* Wait until TXIS flag is set */
            /* The TXIS flag is not set when a NACK is received. */
            if( TP_SUCCESS!=I2CDrv_WaitReset(I2Cx, I2C_ISR_TXIS, I2C_TIMEOUT_MS) ) {
                return TP_ACCESS_ERROR;
            }

            /* Write data to TXDR */
            I2C_SendData(I2Cx, (uint8_t)(*pMsg));
            pMsg++;
            /* Update number of transmitted data */
            DataNum++;   
        }  
    }
    
    if( me->stopEnable )  
    {   //[Standard I2C] command will end with STOP
        /* Wait until STOPF flag is set */
        if( TP_SUCCESS!=I2CDrv_WaitReset(I2Cx, I2C_ISR_STOPF, 10*I2C_TIMEOUT_MS) ) {
            return TP_ACCESS_ERROR;
        }

        /* Clear STOPF flag */
        I2C_ClearFlag(I2Cx, I2C_ICR_STOPCF);
    }
    else
    {
        if( TP_SUCCESS!=I2CDrv_WaitReset(I2Cx, I2C_ISR_TC, I2C_TIMEOUT_MS) ) {
            return TP_ACCESS_ERROR;
        }
    }
#endif

    return (TP_SUCCESS);
}

eTpRet I2CDrv_MasterWriteWith2ByteRegAddress(cI2CDrv * me, tI2CMsg * const msg)
{
    I2C_TypeDef*    I2Cx;
    uint8_t *pMsg = (uint8_t *)(msg->pMsg);
    uint8_t u8_addr;
    uint16_t len, reg_addr;

    len = msg->length;
    reg_addr = (uint16_t)msg->regAddr;

    ASSERT( me->pConfig->regAddrLen == REG_LEN_16BITS );
    ASSERT(len < 251);  // if len > 255, we need to set to special I2C register, don't support > 255 case now.
    
    if (me->pConfig->channel == I2C_CHANNEL_ONE)
    {
        I2Cx=I2C1;
    }
    else if (me->pConfig->channel == I2C_CHANNEL_TWO)
    {
        I2Cx=I2C2;
    }
    else
    {
        ASSERT(0); /* Support I2C1/I2C2 currently */
        return TP_FAIL;
    }

    /*----------------------------------------------------------------------------------------------*/  
    /* Configure slave address, nbytes, reload, end mode and start or stop generation */


	while(I2C_GetFlagStatus(I2Cx, I2C_FLAG_BUSY))//1
  {
    if((I2C_Timeout--) == 0)
    {
      return I2C_FAIL;
    }
  }

  I2C_GenerateSTART(I2Cx, ENABLE);
	I2C_Timeout = I2C_TIMEOUT;
	while(!I2C_CheckEvent(I2Cx, I2C_EVENT_MASTER_MODE_SELECT))//2
  {
    if((I2C_Timeout--) == 0)
    {
      return I2C_FAIL;
    }
  }

	I2C_Send7bitAddress(I2Cx, msg->devAddr, I2C_Direction_Transmitter); //driver_Addr<<1
	I2C_Timeout = I2C_TIMEOUT;
  while(!I2C_CheckEvent(I2Cx, I2C_EVENT_MASTER_TRANSMITTER_MODE_SELECTED))//3
  {
    if((I2C_Timeout--) == 0)
    {
      return I2C_FAIL;
    }
  }


    
    u8_addr = (uint8_t)((reg_addr>>8) & 0x00ff);

    I2C_SendData(I2Cx, u8_addr); 
       while (!I2C_CheckEvent(I2Cx, I2C_EVENT_MASTER_BYTE_TRANSMITTED))//5
	{
		if((I2C_Timeout--) == 0)
		{
			return I2C_FAIL;
		}
	}


      u8_addr = (uint8_t)(reg_addr & 0x00ff);

    I2C_SendData(I2Cx, u8_addr); 
       while (!I2C_CheckEvent(I2Cx, I2C_EVENT_MASTER_BYTE_TRANSMITTED))//5
	{
		if((I2C_Timeout--) == 0)
		{
			return I2C_FAIL;
		}
	}
	/*I2C_SendData(I2Cx, start_Addr);
	I2C_Timeout = I2C_TIMEOUT;
while (!I2C_CheckEvent(I2Cx, I2C_EVENT_MASTER_BYTE_TRANSMITTED))//4
  {
    if((I2C_Timeout--) == 0)
    {
      return I2C_FAIL;
    }
  }*/

  for(write_Num = 0; write_Num < msg->length; write_Num++)
	{
		  I2C_SendData(I2Cx, pMsg[write_Num]); 
      I2C_Timeout = I2C_TIMEOUT;
			  while (!I2C_CheckEvent(I2Cx, I2C_EVENT_MASTER_BYTE_TRANSMITTED))//5
				{
					if((I2C_Timeout--) == 0)
					{
						return I2C_FAIL;
					}
				}
    }

	I2C_GenerateSTOP(I2Cx, ENABLE);	
    #if 0
    /* Reset I2C if some noise let MCU enter I2C BUSY status
     */
    if( I2Cx->ISR & I2C_ISR_BUSY )
    {
        I2CDrv_RecoverFromBusy(I2Cx);
    }
      

    // send start bit
    I2C_TransferHandling(I2Cx, msg->devAddr, (msg->length+2), I2C_AutoEnd_Mode, I2C_Generate_Start_Write); 

    // send register address, only 16bits now.
    u8_addr = (uint8_t)((reg_addr>>8) & 0x00ff);
    if( TP_SUCCESS != I2CDrv_WaitReset(I2Cx, I2C_ISR_TXIS, I2C_TIMEOUT_MS) )
        return TP_ACCESS_ERROR;
    /* Write data to TXDR */
    I2C_SendData(I2Cx, u8_addr);
    u8_addr = (uint8_t)(reg_addr & 0x00ff);
    if( TP_SUCCESS != I2CDrv_WaitReset(I2Cx, I2C_ISR_TXIS, I2C_TIMEOUT_MS) )
        return TP_ACCESS_ERROR;
    /* Write data to TXDR */
    I2C_SendData(I2Cx, u8_addr);

    // send register data
    while( len -- )
    {
        if( TP_SUCCESS != I2CDrv_WaitReset(I2Cx, I2C_ISR_TXIS, I2C_TIMEOUT_MS) )
            return TP_ACCESS_ERROR;
        /* Write data to TXDR */
        I2C_SendData(I2Cx, *pMsg);
        pMsg ++;
    }
    
    /* Wait until STOPF flag is set */
    if( TP_SUCCESS!=I2CDrv_WaitReset(I2Cx, I2C_ISR_STOPF, I2C_TIMEOUT_MS) )
        return TP_ACCESS_ERROR;

    /* Clear STOPF flag */
    I2C_ClearFlag(I2Cx, I2C_ICR_STOPCF);
    #endif
    return (TP_SUCCESS);
}

eTpRet I2CDrv_MasterRead(cI2CDrv * const  me, tI2CMsg * msg)
{
    uint8*          pMsg = msg->pMsg;
    I2C_TypeDef* I2Cx;
    if (me->pConfig->channel == I2C_CHANNEL_ONE)
    {
        I2Cx=I2C1;
    }
    else if (me->pConfig->channel == I2C_CHANNEL_TWO)
    {
        I2Cx=I2C2;
    }
    else
    {
        ASSERT(0); //not support for more I2C bus
    }

 I2C_AcknowledgeConfig(I2C1, ENABLE);	
 while(I2C_GetFlagStatus(I2C1, I2C_FLAG_BUSY))//1
  {
    if((I2C_Timeout--) == 0)
    {
      return I2C_FAIL;
    }
  }

 I2C_GenerateSTART(I2C1, ENABLE);
	I2C_Timeout = I2C_TIMEOUT;
  while(!I2C_CheckEvent(I2C1, I2C_EVENT_MASTER_MODE_SELECT))//2
  {
    if((I2C_Timeout--) == 0)
    {
      return I2C_FAIL;
    }
  }
    #if 0
    
    /* Reset I2C if some noise let MCU enter I2C BUSY status
     */
    if( I2Cx->ISR & I2C_ISR_BUSY && !me->stopEnable)
    {
        I2CDrv_RecoverFromBusy(I2Cx);
    }
    #endif  
/*-------------------------------------------------------------*/
    switch(me->pConfig->regAddrLen)
    {
      case REG_LEN_NONE:
        //do nothing
        break;
      case REG_LEN_8BITS:
	 #if 0
        //Send device address with W bit
        I2C_TransferHandling(I2Cx, msg->devAddr, 1, I2C_SoftEnd_Mode, I2C_Generate_Start_Write);
        if( TP_SUCCESS!=I2CDrv_WaitReset(I2Cx, I2C_ISR_TXIS, I2C_TIMEOUT_MS) ) {
            return TP_ACCESS_ERROR;
        }
        
        I2C_SendData(I2Cx, (uint8_t)msg->regAddr);
	 #endif
	 I2C_Send7bitAddress(I2Cx, msg->devAddr, I2C_Direction_Transmitter); //driver_Addr<<1
	I2C_Timeout = I2C_TIMEOUT;
	while(!I2C_CheckEvent(I2C1, I2C_EVENT_MASTER_TRANSMITTER_MODE_SELECTED))//3
	  {
	    if((I2C_Timeout--) == 0)
	    {
	      return I2C_FAIL;
	    }
	  }

	 I2C_SendData(I2Cx, (uint8_t)msg->regAddr);
	I2C_Timeout = I2C_TIMEOUT;
  	 while(!I2C_CheckEvent(I2C1, I2C_EVENT_MASTER_BYTE_TRANSMITTED))//4
	  {
	    if((I2C_Timeout--) == 0)
	    {
	      return I2C_FAIL;
	    }
	  }
        break;        
      case REG_LEN_16BITS:
	 #if 0
        //Send device address with W bit
        I2C_TransferHandling(I2Cx, msg->devAddr, 2, I2C_SoftEnd_Mode, I2C_Generate_Start_Write);
        if( TP_SUCCESS!=I2CDrv_WaitReset(I2Cx, I2C_ISR_TXIS, I2C_TIMEOUT_MS) ) {
            return TP_ACCESS_ERROR;
        }
        
        //Send register address
        I2C_SendData(I2Cx, (uint8_t)((msg->regAddr&0xff00)>>8));
        
        if( TP_SUCCESS!=I2CDrv_WaitReset(I2Cx, I2C_ISR_TXIS, I2C_TIMEOUT_MS) ) {
            return TP_ACCESS_ERROR;
        }
        
        I2C_SendData(I2Cx, (uint8_t)(msg->regAddr&0x00ff));
	 #endif
        break;
      case REG_LEN_24BITS:
	 #if 0
        //Send device address with W bit
        I2C_TransferHandling(I2Cx, msg->devAddr, 3, I2C_SoftEnd_Mode, I2C_Generate_Start_Write);
        if( TP_SUCCESS!=I2CDrv_WaitReset(I2Cx, I2C_ISR_TXIS, 10*I2C_TIMEOUT_MS) ) {
            return TP_ACCESS_ERROR;
        }
        
        //Send register address
        I2C_SendData(I2Cx, (uint8_t)((msg->regAddr&0xff0000)>>16));
        
        //Send register address
        if( TP_SUCCESS!=I2CDrv_WaitReset(I2Cx, I2C_ISR_TXIS, I2C_TIMEOUT_MS) ) {
            return TP_ACCESS_ERROR;
        }
        
        //Send register address
        I2C_SendData(I2Cx, (uint8_t)((msg->regAddr&0xff00)>>8));
        if( TP_SUCCESS!=I2CDrv_WaitReset(I2Cx, I2C_ISR_TXIS, I2C_TIMEOUT_MS) ) {
            return TP_ACCESS_ERROR;
        }
        
        I2C_SendData(I2Cx, (uint8_t)(msg->regAddr&0x00ff));
	 #endif
        break;
      default:
        ASSERT(0); //wrong register length setting
        break;
    }


   I2C_GenerateSTART(I2Cx, ENABLE);
	I2C_Timeout = I2C_TIMEOUT;
  while(!I2C_CheckEvent(I2Cx, I2C_EVENT_MASTER_MODE_SELECT))//5
  {
    if((I2C_Timeout--) == 0)
    {
      return I2C_FAIL;
    }
  }
	
		I2C_Send7bitAddress(I2Cx, msg->devAddr,I2C_Direction_Receiver);//driver_Addr<<1
	I2C_Timeout = I2C_TIMEOUT;
 	while(!I2C_CheckEvent(I2Cx, I2C_EVENT_MASTER_RECEIVER_MODE_SELECTED))//6
  {
    if((I2C_Timeout--) == 0)
    {
      return I2C_FAIL;
    }
  }
   #if 0
    if(me->pConfig->regAddrLen != REG_LEN_NONE)
    {
        if( TP_SUCCESS!=I2CDrv_WaitReset(I2Cx, I2C_ISR_TC, I2C_TIMEOUT_MS) ) {
            return TP_ACCESS_ERROR;
        }
    }
    
    /* Configure slave address, nbytes, reload, end mode and start or stop generation */
    
    if( !me->stopEnable )
    {
        //command will *not* end of STOP
        I2C_TransferHandling(I2Cx, msg->devAddr, (uint8_t)(msg->length), I2C_SoftEnd_Mode, I2C_Generate_Start_Read);
    }
    else
    {  
        //command will end of STOP
        I2C_TransferHandling(I2Cx, msg->devAddr, (uint8_t)(msg->length), I2C_AutoEnd_Mode, I2C_Generate_Start_Read);
    }
    #endif
 /*-------------------------------------------------------------*/  
  /* Read data from RXDR */

    uint32_t DataNum = 0;
    while(DataNum != (msg->length-1))
    {
         I2C_Timeout = I2C_TIMEOUT;
	 while(!I2C_CheckEvent(I2Cx, I2C_EVENT_MASTER_BYTE_RECEIVED)) /* EV7 *///7
		{
			if((I2C_Timeout--) == 0)
			{
				return I2C_FAIL;
			}
		}
       *(pMsg) = I2C_ReceiveData(I2Cx);
	 /* Update number of received data */
        DataNum++;
        if (NULL != (pMsg))
        {
            pMsg++;
        }
        #if 0
        /* Wait until RXNE flag is set */
        if( TP_SUCCESS!=I2CDrv_WaitReset(I2Cx, I2C_ISR_RXNE, I2C_TIMEOUT_MS) ) {
            return TP_ACCESS_ERROR;
        }
        /* Read data from RXDR */
        *(pMsg) = I2C_ReceiveData(I2Cx);
        /* Update number of received data */
        DataNum++;
        if (NULL != (pMsg))
        {
            pMsg++;
        }
	 #endif
    }


    I2C_AcknowledgeConfig(I2Cx, DISABLE);	
  while(!I2C_CheckEvent(I2Cx, I2C_EVENT_MASTER_BYTE_RECEIVED))/* EV7 *///8
	  {
					if((I2C_Timeout--) == 0)
					{
						return I2C_FAIL;
					}
		}
  *(pMsg) = I2C_ReceiveData(I2Cx);
	I2C_GenerateSTOP(I2C1, ENABLE);		
    #if 0
    if( me->stopEnable )  
    {   //Standard I2C
        /* Wait until STOPF flag is set */
        if( TP_SUCCESS!=I2CDrv_WaitReset(I2Cx, I2C_ISR_STOPF, I2C_TIMEOUT_MS) ) {
           return TP_ACCESS_ERROR;
        }
    
        /* Clear STOPF flag */
        I2C_ClearFlag(I2Cx, I2C_ICR_STOPCF);
    }
    else
    {
        if( TP_SUCCESS!=I2CDrv_WaitReset(I2Cx, I2C_ISR_TC, I2C_TIMEOUT_MS) ) {
            return TP_ACCESS_ERROR;
        }
    }
    #endif
    /*!< Return Register value */
    return (TP_SUCCESS);
}
